[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entity/Obstacle/MovingPlatform/MovingPlatform.gd" type="Script" id=2]

[node name="MovingPlatform" type="KinematicBody2D"]
motion/sync_to_physics = true
script = ExtResource( 2 )

[node name="PlayerActivationArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 2147483650

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="PlayerActivationArea" to="." method="_on_PlayerActivationArea_body_entered"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
